--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             display: inline-block;
             font-size: 16px;
             cursor: pointer;
+            box-sizing: border-box;
+            transition: display 0.5s;
         }
     </style>
 </head>
